# web-exam-4sem

backend/: .coveragerc  .env.example  .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/albums/: models.py  serializers.py  views.py
backend/albums/migrations/: 0001_initial.py
backend/albums/tests/: test_models.py  test_setup.py  test_views.py  test_views_setup.py
backend/artists/: apps.py  models.py  views.py
backend/artists/migrations/: 0001_initial.py
backend/artists/tests/: test_models.py  test_setup.py  test_views.py  test_views_setup.py
backend/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_customuser_token.py  0003_alter_customuser_is_active_alter_customuser_is_admin_and_more.py  0004_historicalcustomuser.py
backend/authentication/tests/: test_models.py  test_models_setup.py  test_views.py  test_views_setup.py
backend/core/: celery.py  settings.py  urls.py  views.py
backend/genres/: apps.py  models.py  views.py
backend/genres/migrations/: 0001_initial.py
backend/genres/tests/: test_models.py  test_setup.py  test_views.py  test_views_setup.py
backend/playlists/: apps.py  models.py  serializers.py  tasks.py  views.py
backend/playlists/migrations/: 0001_initial.py  0002_playlist_is_visible_alter_playlist_track.py
backend/playlists/tests/: test_models.py  test_setup.py  test_views.py  test_views_setup.py
backend/tracks/: apps.py  models.py  serializers.py  views.py
backend/tracks/migrations/: 0001_initial.py
(+42 files in other folders)
